--- a/public/index.html
+++ b/public/index.html
@@ -6,36 +6,54 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Vishal Thakur | Software Developer Portfolio" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Vishal | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <title>Vishal Thakur | Portfolio</title>
+
+  <!-- SEO Meta -->
+  <meta name="description"
+    content="Portfolio of Vishal Thakur, Software Developer Enthusiast skilled in React.js, Node.js, Express, MongoDB, Tailwind CSS, and more. Explore my projects, experience, and achievements." />
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
+  <meta itemprop="name" content="Vishal Thakur | Portfolio">
+  <meta itemprop="description"
+    content="Portfolio of Vishal Thakur, Software Developer Enthusiast skilled in React.js, Node.js, Express, MongoDB, Tailwind CSS, and more.">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://github.com/VishalThakur001/Portfolio/blob/main/Images/readme-img.png">
 
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:url" content="https://vishalthakur-portfolio.vercel.app">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
+  <meta property="og:title" content="Vishal Thakur | Portfolio">
+  <meta property="og:description"
+    content="Portfolio of Vishal Thakur, Software Developer Enthusiast skilled in React.js, Node.js, Express, MongoDB, Tailwind CSS, and more.">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://github.com/VishalThakur001/Portfolio/blob/main/Images/readme-img.png">
 
-  <!-- Twitter Meta Tags -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
+  <meta name="twitter:title" content="Vishal Thakur | Portfolio">
+  <meta name="twitter:description"
+    content="Portfolio of Vishal Thakur, Software Developer Enthusiast skilled in React.js, Node.js, Express, MongoDB, Tailwind CSS, and more.">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://github.com/VishalThakur001/Portfolio/blob/main/Images/readme-img.png">
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <!-- Basic Contact Info (for SEO crawlers) -->
+  <footer style="display:none;">
+    <p>Name: Vishal Thakur</p>
+    <p>Email: <a href="mailto:vishalthakur5862@gmail.com">vishalthakur5862@gmail.com</a></p>
+    <p>Phone: +91-90419-98561</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/vishal-thakur-b66658277/"
+        target="_blank">linkedin.com/in/vishal-thakur</a></p>
+    <p>GitHub: <a href="https://github.com/VishalThakur001" target="_blank">github.com/VishalThakur001</a></p>
+    <p>Portfolio: <a href="https://vishalthakur-portfolio.vercel.app/"
+        target="_blank">vishalthakur-portfolio.vercel.app</a></p>
+  </footer>
 </body>
 
 </html>
